--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12650400
+spring.datasource.username=sql12650400
+spring.datasource.password=XMizP1GWYD
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.h2.console.enabled=true
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Logging SQL statements (optional)
+spring.jpa.show-sql=true
