--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12650400
-spring.datasource.username=sql12650400
-spring.datasource.password=XMizP1GWYD
+spring.datasource.url=jdbc:mysql://${DB_URL}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate properties
